fix text boxes not showing input

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -271,6 +271,9 @@ div.create {
     }
   }
 }
+.q-field__label, .q-field__native {
+  z-index: 1;
+}
 .list-items {
   display: flex;
   flex-direction: column;
